<?xml version="1.0"?>
<package format="2">
  <name>team_nust_msgs</name>
  <version>0.0.0</version>
  <description>The team_nust_msgs package</description>
  <author email="saifullah3396@gmail.com">Saifullah</author>
  <maintainer email="saifullah3396@gmail.com">Saifullah</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
