<?xml version="1.0"?>
<package format="2">
  <name>team_nust_nao_interface</name>
  <version>0.0.0</version>
  <description>The team_nust_nao_interface package</description>
  <author email="saifullah3396@gmail.com">Saifullah</author>
  <maintainer email="saifullah3396@gmail.com">Saifullah</maintainer>
  <license>BSD</license>  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>team_nust_msgs</exec_depend>
  <exec_depend>team_nust_network_handler</exec_depend>
  <exec_depend>team_nust_visualizer</exec_depend>
  <exec_depend>team_nust_visualizer_plugins</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
