<?xml version="1.0"?>
<package format="2">
  <name>team_nust_visualizer_plugins</name>
  <version>0.0.0</version>
  <description>The team_nust_visualizer_plugins package</description>
  <maintainer email="saifullah3396@gmail.com">Saifullah</maintainer>
  <license>BSD</license>
  <author email="saifullah3396@gmail.com">Saifullah</author> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>team_nust_msgs</build_depend>
  <build_depend>rviz</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>team_nust_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>
  <export>
  <rviz plugin="${prefix}/plugin_description.xml" />
  </export>
</package>
